# jobops-radar

./: .env.example  .gitignore  docker-compose.yml  handoff.md  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: faf99527d991_create_job_postings_table.py
app/: main.py
app/api/: routes_job_postings.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: __init__.py  job_posting.py
app/schemas/: __init__.py  job_posting.py
app/services/: __init__.py  job_postings.py
docs/: work-summary.md
docs/adr/: 0001-use-fastapi.md  0002-backend-first-mvp.md  0003-use-sqlite-fallback-before-postgresql.md  0004-use-sqlalchemy-and-alembic.md  0005-use-deterministic-fit-scoring.md  0006-delay-frontend.md  0007-use-session-logs-and-learning-notes.md  0008-use-saramin-official-api-not-scraping.md  README.md
docs/daily-logs/: 2026-06-30.md
docs/interview-prep/: backend-question-map.md  jobops-answer-bank.md
docs/learning-notes/: backend-concepts.md  cs-dsa-concepts.md
docs/session-logs/: 2026-06-29.md  2026-06-30.md
tests/: test_config.py  test_db.py  test_health.py  test_job_posting.py  test_job_posting_routes.py  test_job_posting_service.py
